# naiades

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
__cmake_systeminformation/: CMakeCache.txt
blender/extensions/addons/surface_area_calculator/: __init__.py
blender/extensions/stable_fluids/: __init__.py  blender_manifest.toml
blender/extensions/uv_sim/: __init__.py  blender_manifest.toml  mesh_utils.py
cmake/: GenerateDocs.cmake
examples/: CMakeLists.txt  grid_fd_poisson.cpp  grid_rbf_poisson.cpp  lid_driven_cavity.cpp  mesh_rbf_poisson.cpp  morton_tree.cpp  poisson.cpp  poisson_rbf.cpp  smoke_solver2.cpp
ext/: CMakeLists.txt  catch2.cmake  eigen.cmake  libigl.cmake  pybind11.cmake  simple_svg.cmake
lib/: CMakeLists.txt  naiades_py.cpp
lib/naiades/base/: debug.h  result.h
lib/naiades/core/: blas.h  boundary.cpp  boundary.h  boundary_conditions.h  discretization.cpp  discretization.h  element.cpp  element.h  element_set.cpp  element_set.h  field.cpp  field.h  geometry.h  mesh.cpp  mesh.h  neighbourhood.cpp  neighbourhood.h  operators.cpp  operators.h  sim_mesh.cpp  sim_mesh.h  spatial_discretization.cpp  spatial_discretization.h  symbol.h  topology.cpp  topology.h
lib/naiades/geo/: grid.cpp  grid.h  he.cpp  he.h  utils.cpp  utils.h
lib/naiades/numeric/: blas.cpp  blas.h  boundary.cpp  boundary.h  boundary_conditions.h  discrete_equation.h  discrete_expression.cpp  discrete_expression.h  discrete_operator.cpp  discrete_operator.h  linear_solvers.cpp  linear_solvers.h  rbf.cpp  rbf.h  spatial_discretization.cpp  spatial_discretization.h  stencil.cpp  stencil.h
lib/naiades/sampling/: sampler.h  stencil.cpp  stencil.h
lib/naiades/solvers/: convection.h  sim_control.cpp  sim_control.h  smoke_solver.cpp  smoke_solver.h  solver.h
lib/naiades/spatial/: morton_tree.cpp  morton_tree.h
lib/naiades/utils/: fields.cpp  fields.h  io.cpp  io.h  math.cpp  math.h  utils.cpp  utils.h
tests/: CMakeLists.txt  blas_tests.cpp  core_tests.cpp  geo_tests.cpp  naiades_py_tests.py  numeric_tests.cpp  sampling_tests.cpp  utils_tests.cpp
